--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,20 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+    <header>
     <h1>👸🏻 Eileens Imageboard 🌿</h1>
+    </header>
     <div id="main">
-       
+        
+        <form>
+            <input v-model="title" type="text" name="title" placeholder="title🐨">
+            <input v-model="description" type="text" name="description" placeholder="description🐸">
+            <input v-model="username" type="text" name="username" placeholder="username🦄">
+            <input @change="handleClick" type="file" name="file" accept="image/*">
+            <button @click.prevent="handleClick">SUBMIT</button>
+        </form>
+
+
         <div id="pictures" v-for="img in images" 
             :key="img.id" >
             <img :src="img.url" :alt="img.description">
