--- a/public/index.html
+++ b/public/index.html
@@ -52,9 +52,10 @@
 
     <script id="my-component-template" type="text/x-template">
     <div>
+        <p @click="closeClick">X</p>
         <!-- <h1>This should be the image </h1> -->
        <img :src="image.url">
-       {{image.title}} {{image.description}} {{image.username}} {{image.created_at}}
+      <p>{{image.title}} {{image.description}} {{image.username}} {{image.created_at}}</p> 
     </div>
     </script>
 
