now without the errorgit add .

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
                     <p id="x" @click="closeClick">X</p>
                 
                     <img :src="image.url">
-                    <p id="info">{{image.title}} - {{image.description}} - {{image.username}} - {{image.created_at}}</p> 
+                    <p id="info">{{image.title}} - {{image.description}} - {{image.username}}</p> 
                     <second-component :id="id">
                     </second-component>
                 
